Tajo Change Log 

Release 0.11.4 - unreleased

  BUG FIXES

    TAJO-2168: NullPointerException occurs when a simple query contains a python udf. 
    (jihoon)

    TAJO-2163: No error message is showed when query execution failed.
    (Wonjun Hong via jihoon)

    TAJO-2162: Internal error is occured while running query including 'order by'. 
    (jihoon)

Release 0.11.3 - released

  NEW FEATURES

  IMPROVEMENT

  TASKS

    TAJO-2145: Error codes based on errno.h need prefix.
    (Jongyoung Park via hyunsik)

    TAJO-2142: Temporarily disable NOT IN subquery. (jihoon)

  BUG FIXES

    TAJO-2143: Fix race condition in task history writer. (jinho)

    TAJO-2140: TajoInternalError does not contains reason stack trace. (jinho)

    TAJO-2135: Invalid join result when join key columns contain nulls. (jihoon)

    TAJO-2110: Fix incorrect DateTime and remove hard coded tests. (jinho)

    TAJO-2119: Invalid sort result when sort key columns contain non-ascii values. 
    (jihoon)

  SUB TASKS 

Release 0.11.2 - released

  IMPROVEMENT

    TAJO-2089: Improve null handling in UDF. (jinho)

  TASKS

    TAJO-2088: Change QueryTestCaseBase.runSimpleTests() to return a set of 
    TajoResultSetBase. (jihoon)

    TAJO-2076: Add backward compatibility testing with hadoop on travis. (jinho)

    TAJO-2074: Upgrade hadoop and netty. (jinho)

    TAJO-1939: Implement PgSQLTablespace::getTableVolume() method. (jihoon)

    TAJO-2017: Replace manual array copy with Collection.
    (Dongkyu Hwangbo via jinho)

    TAJO-2070: Remove unnecessarily version property in maven pom. (jinho)

  BUG FIXES

    TAJO-2093: Partition Pruning doesn't handle Constant folding occasionally
    for BETWEEN clause. (jaehwa)

    TAJO-2100: Add missing cancellation in defaultTaskScheduler when a worker is 
    no respond. (jinho)

    TAJO-2092: TestStorages.testNullHandlingTypesWithProjection occasionally fail.
    (jinho)

    TAJO-2095: HiveCatalogStore::existIndexesByTable should not throw 